[gd_scene load_steps=3 format=1]

[ext_resource path="res://Scenes/Comment/gameCtrl.gd" type="Script" id=1]
[ext_resource path="res://Audios/bgm2.ogg" type="AudioStream" id=2]

[node name="gameCtrl" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )
start = false
waitTime = 10

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="gemLabel" type="Label" parent="."]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 45.0
margin/top = 25.0
margin/right = 85.0
margin/bottom = 39.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
text = "Gems"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="timeLabel" type="Label" parent="."]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 550.0
margin/top = 25.0
margin/right = 590.0
margin/bottom = 39.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
text = "Timer"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 2 )
stream/play = false
stream/loop = true
stream/volume_db = 3.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


